// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitStepScript > dispatches a non-script task to real-task mode, carrying its resolved inputs 1`] = `
"#!/usr/bin/env bash
# ── Step 030 · "Publish tests" · PublishTestResults@2 ─────────────────────────
# from: pipeline.expanded.yml:6
# condition: succeeded()      continueOnError: false      timeout: job default
# fidelity: degraded — runs the real task against the emulated task-lib; see README §fidelity

set -euo pipefail
# shellcheck disable=SC1091  # runtime.sh is generated into the project lib/ at convert time
source "$AZDO_EMU_LIB/runtime.sh"

# Real-task mode: run PublishTestResults@2 against the emulated task-lib.
# run_task.sh resolves the cached task.json, builds INPUT_* from these inputs, and execs the
# task's own handler. The INPUT_* name transform is task-lib's (C-E07-001).
azdo_run_task <<'AZDO_EMU_TASK_INPUTS'
task: PublishTestResults@2
  testResultsFiles: **/*.xml
  failTaskOnFailedTests: true
AZDO_EMU_TASK_INPUTS
"
`;

exports[`emitStepScript > emits a bash step verbatim 1`] = `
"#!/usr/bin/env bash
# ── Step 030 · "Lint" · bash ──────────────────────────────────────────────────
# from: pipeline.expanded.yml:6
# condition: succeeded()      continueOnError: false      timeout: job default
# fidelity: exact — script steps run verbatim; see README §fidelity

set -euo pipefail
# shellcheck disable=SC1091  # runtime.sh is generated into the project lib/ at convert time
source "$AZDO_EMU_LIB/runtime.sh"

set -euo pipefail
echo "hello"
"
`;

exports[`emitStepScript > emits a native checkout for a desugared checkout step (E07-S03-T01) 1`] = `
"#!/usr/bin/env bash
# ── Step 030 · "checkout-self" · checkout ─────────────────────────────────────
# from: pipeline.expanded.yml:6
# condition: succeeded()      continueOnError: false      timeout: job default
# fidelity: exact — script steps run verbatim; see README §fidelity

set -euo pipefail
# shellcheck disable=SC1091  # runtime.sh is generated into the project lib/ at convert time
source "$AZDO_EMU_LIB/runtime.sh"

azdo_checkout --repository 'self'
"
`;

exports[`emitStepScript > emits a pwsh step through a quoted heredoc, reproducing errorActionPreference 1`] = `
"#!/usr/bin/env bash
# ── Step 030 · "Cross-platform" · pwsh ────────────────────────────────────────
# from: pipeline.expanded.yml:6
# condition: succeeded()      continueOnError: false      timeout: job default
# fidelity: degraded — runs via pwsh on this host; see README §fidelity

set -euo pipefail
# shellcheck disable=SC1091  # runtime.sh is generated into the project lib/ at convert time
source "$AZDO_EMU_LIB/runtime.sh"

pwsh -NoLogo -NoProfile -Command - <<'AZDO_EMU_PWSH'
$ErrorActionPreference = 'stop'
Write-Host "hi"
AZDO_EMU_PWSH
"
`;

exports[`emitStepScript > emits a script step with macros intact (C-E06-018/024) 1`] = `
"#!/usr/bin/env bash
# ── Step 030 · "Build solution" · script ──────────────────────────────────────
# from: pipeline.expanded.yml:6
# condition: succeeded()      continueOnError: false      timeout: job default
# fidelity: exact — script steps run verbatim; see README §fidelity
# NOTE: $(…) below is an ADO macro — run_step expands it just-in-time.

set -euo pipefail
# shellcheck disable=SC1091  # runtime.sh is generated into the project lib/ at convert time
source "$AZDO_EMU_LIB/runtime.sh"

echo "config=$(buildConfiguration)"
"
`;
